New stuff from nvm.dates* (written on top so as to avoid tedious merge
conflicts, move after landing on mainline):

        Internal

        - Using 64 bit integer values to represent dates internally. This
          has no user visible effect.

??? ???  ? ??:??:?? UTC 2008

        0.42 release.

        Changes

        Bugs fixed

        - 'mtn db kill_rev_locally' did not update the inodeprint
          cache when executed from a workspace on which the
          revision's changes where applied.

        - Some recent performance issues have been corrected:
          * since 0.40, there is much more use of hex encoding/decoding.
            These functions have been sped up considerably.
          * since 0.40, every command in an 'automate stdio' session
            would reinitialize the database. This was rather slow, so
            monotone will now keep the database open between commands.

	- The Lua-based contributed Monotone extension introduced in
	  0.38 haven't been added to the tarball; this has been fixed.
 
        New features

        - New 'mtn ls duplicates' command which lets you list
          duplicated files in a given revision or the workspace.

        - New option --no-workspace, to make monotone ignore any
          workspace it might have been run in.

        Internal

        - Update Botan to 1.7.12.


Wed Sep  3 21:13:18 UTC 2008

        0.41 release.

        Changes

        - 'mtn clone' now takes a branch argument rather than a branch
          option which is more what people expect given the fact that
          mtn push/pull/sync do not use a branch option either.

        - 'mtn automate inventory' will show the birth revision for
          any file that has been committed.

        Bugs fixed

        - If the options '--db' or '--keydir' were previously
          specified for a command which was executed inside a
          workspace and one or both option arguments were invalid