@@ -1,6 +1,11 @@
 New stuff from nvm.dates* (written on top so as to avoid tedious merge
 conflicts, move after landing on mainline):
 
+        New features
+
+        - Additional '--full' option for 'mtn db info' to display some
+        statistic analysis of the date certs in the database.
+
         Internal
 
         - Using 64 bit integer values to represent dates internally. This
